[package]
name = "solana_explore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
fantoccini = { version = "0.17", default-features = false, features = ["rustls-tls"]}
select = "0.6.0-alpha.1"
tokio = { version = "1", features = ["full"]}
env_logger = "0.9.1"
log = "0.4.17"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
chrono = "0.4"
dotenv = "0.15.0"
clap = { version = "4.0.26", features = ["derive"] }